# mcas

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: args.rs  log.rs  main.rs  mcas.rs
src/func/: get.rs  help.rs  mod.rs  msg.rs
src/functions/: get.rs  help.rs
